<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8" >

    <include
        android:id="@+id/title"
        layout="@layout/view_title" />

    <TextView
        android:id="@+id/text_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/site_prompt"
        android:textColor="#ff0000"
        android:textSize="18sp" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom"
        android:layout_below="@+id/text_prompt" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/site_name"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_name"
                android:layout_marginTop="20dp"
                android:hint="@string/site_address"
                android:textColor="#000000" />

            <LinearLayout
                android:id="@+id/layout_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_address"
                android:layout_marginTop="10dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/text_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site_type"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_type"
                android:layout_marginTop="10dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site_photo"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/img_photo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:clickable="true"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_mark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_photo"
                android:layout_marginTop="10dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/text_mark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site_mark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_mark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <include
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/view_bottom" />

</RelativeLayout>